website/src/pages/routes/routesPage.scss
#flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 3rem;

  section {
    width: 500px  ;
  }
}

.map-container {
  padding: 2rem;
  width: 450px;
  height: 600px;
}

#route-container {
  margin-bottom: 2rem;

    li {
      padding: 1rem;
      list-style-type: -moz-ethiopic-numeric;
    }

    li:hover {
      padding-left: 1.2rem;
      -webkit-transition: all 0.1s ease-in-out;
      font-weight: bold;
    }
}

img {
  width: 80%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

details {
  width: 70%;
  margin: 0 auto .5rem;
 // box-shadow: 0 0 2rem -.5rem rgba(0,0,0,.4);
 // overflow: hidden;
  font-size: 16px;
  background: white;
  padding-left: 2.2rem;
  border: solid var(--color-accent);
}

summary {
  padding: 1rem;
  display: block;
  background: white;
  padding-left: 2.2rem;
  position: relative;
  cursor: pointer;
}

summary:before {
  content: '';
  border-width: .4rem;
  border-style: solid;
  border-color: transparent transparent transparent var(--color-accent);
  position: absolute;
  top: 1.3rem;
  left: 1rem;
  transform: rotate(0);
  transform-origin: .2rem 50%;
  transition: .25s transform ease;
}

/* THE MAGIC  inspired in  https://css-tricks.com/how-to-animate-the-details-element/️ */
details[open] > summary:before {
  transform: rotate(90deg);
}
 #page-container{
   margin: 6rem 14rem;
 }

